--- a/index.html
+++ b/index.html
@@ -163,16 +163,16 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">10%</i></span>
+              <span class="skill">SQL <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">0%</i></span>
+              <span class="skill">React.js <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -195,7 +195,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Summary</h3>
+            <!-- <h3 class="resume-title">Summary</h3> -->
             <!-- <div class="resume-item pb-0">
               <h4>Jennifer Ayala</h4>
               <p><em>Recent Bootcamp grad that is eager to learn about coding each day. .</em></p>
@@ -225,23 +225,21 @@
             <div class="resume-item">
               <h4>New Account Specialist</h4>
               <h5>2022 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <p><em>Seashine Financial, Irvine, CA</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Support clients in establishing new Real Estate Accounts through phone, email, messaging, and screen sharing using expert communication tactics and practices.</li>
+                <li>Serve as a liaison between clients and internal departments. </li>
+                <li>Perform time sensitive and complex activities associated with data intake, document collection and contract review.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Assistant Account Manager</h4>
+              <h5>2018 - 2022</h5>
+              <p><em>Western Growers Insurance Services, Irvine, CA</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Assisted with the renewal of 97% of medical , dental, vision, and life policies for multiple Account Manager’s books of business.</li>
+                <li>Developed a professional relationship with direct and brokered accounts.</li>
+                <li>Generated and validated data spreadsheets for client renewals and WGIS management and/or submitted to appropriate carriers for processing.</li>
               </ul>
             </div>
           </div>
