--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Jennifer Ayala</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/Aya-22" class="github"><i class="bx bxl-github"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="www.linkedin.com/in/jennifer-ayala-b64005147" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -100,7 +100,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Bootcamp Grad</strong> <span>December 2021</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>In the works</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+000 000 000</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+000 000 000</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Santa Ana, CA</span></li>
                 </ul>
               </div>
@@ -254,7 +254,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -366,7 +366,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
         <div class="container">
   
           <div class="section-title">
@@ -408,7 +408,9 @@
           </div>
   
         </div>
-      </section><!-- End Services Section -->
+      </section> -->
+      
+      <!-- End Services Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -416,7 +418,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Let's build the future! To collaborate with me please contact me at the following:</p>
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -432,14 +434,14 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>j.ayala0695@gmail.com</p>
               </div>
 
-              <div class="phone">
+              <!-- <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
                 <p>+1 000 000 0000</p>
-              </div>
+              </div> -->
 
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
             </div>
